fdo#54612 don't crash on RTF_DPPTX before RTF_DPPOLYCOUNT

Change-Id: I35bf580df157dee429d9dca193945ea95616d678